Update downloading of .jar

--- a/templates/minecraft-server.service.conf.erb
+++ b/templates/minecraft-server.service.conf.erb
@@ -8,4 +8,4 @@ respawn
 
 expect fork
 
-exec java -Xms<%= ram %>M -Xmx<%= ram %>M -jar <%= path %>
+exec java -Xms<%= max_ram %>M -Xmx<%= max_ram %>M -jar <%= full_path %>
