Add nogui to exec in startup.

--- a/templates/minecraft-server.service.conf.erb
+++ b/templates/minecraft-server.service.conf.erb
@@ -6,4 +6,4 @@ stop on shutdown
 
 respawn
 
-exec java -Xms<%= max_ram %>M -Xmx<%= max_ram %>M -jar <%= full_path %>
+exec java -Xms<%= max_ram %>M -Xmx<%= max_ram %>M -jar <%= full_path %> nogui
